<resources>
    <string name="app_name">Retrofit-Simple-Implementation</string>
    <string name="title">Test Implementation Retrofit</string>
    <string name="header">Used Fake API : https://jsonplaceholder.typicode.com/</string>
    <string name="hint_id">ID</string>
    <string name="hint_user_id">User ID</string>
    <string name="hint_title">Title</string>
    <string name="kosong">Kosong</string>
    <string name="body">Body</string>
    <string name="value_user_id">User Id : %1$s</string>
    <string name="value_id">Id : %1$s</string>
    <string name="value_title">Title : %1$s</string>
    <string name="value_body">Body: %1$s</string>
    <string name="title_activity_add_data">AddDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>